busybox-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox-pvc-1
  name: busybox-pvc-1
spec:
  containers:
  - image: busybox
    name: busybox-pvc-1
    resources: {}
    command:
    - sh
    - -c
    - 'sleep 3600'
    volumeMounts:
    - name: pvc-demo
      mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: pvc-demo
    persistentVolumeClaim: 
      claimName: pvc-demo
status: {}
