busybox-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox-vol
  name: busybox-vol
spec:
  containers:
  - command:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox-vol-1
    resources: {}
    volumeMounts:
    - name: dir
      mountPath: /etc/foo
  - command:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox-vol-2
    resources: {}
    volumeMounts:
    - name: dir
      mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: dir
    emptyDir: {}
status: {}
