deployment-demo-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deployment-demo
  name: deployment-demo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: deployment-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deployment-demo
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
