get-details-config-single-var-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: get-details-configsingle-var
  name: get-details-configsingle-var
spec:
  containers:
  - image: get-details:1.5
    name: get-details-configsingle-var
    args:
      - "$(DB_URL)"
      - "$(REDIS_URL)"
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
