liveness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: liveness-pod
  name: liveness-pod
  namespace: prod
spec:
  containers:
  - image: nginx
    name: liveness-pod
    resources: {}
    livenessProbe:
       initialDelaySeconds: 5
       periodSeconds: 5
       exec:
        command: 
        - ls /cipg
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
