mult.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi
  name: multi
spec:
  containers:
  - name: multi
    args:
    - sh
    - -c
    - |-
      while true;
      do echo ‘Hi I am from Main container’ >> /var/log/index.html; sleep 5; done
    image: busybox
    volumeMounts:
    - name: log
      mountPath: /var/log
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: log
      mountPath: /usr/share/nginx/html
  volumes:
  - name: log
    emptyDir: {} 
status: {}
