multi-container-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-container
  name: multi-container
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  - image: busybox
    name: sleep
    command: ["sleep", "360"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
