multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-container
  name: multi-container
spec:
  containers:
  - command: ["sh","-c","echo hello;sleep 3600"]
    image: busybox
    name: multi-container-1
    resources: {}
  - command: ["sh","-c","echo hello;sleep 3600"]
    image: busybox
    name: multi-container-2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
