new-get-details-single.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: new-get-details
  name: new-get-details
spec:
  containers:
  - image: get-details:1.5
    name: new-get-details
    args:
      - "$(DB_URL)"
      - "$(REDIS_URL)"
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
