nginx-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx-node-affinity
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  affinity: 
    nodeAffinity:   
      preferredDuringSchedulingIgnoredDuringExecution:     
        - preference:       
            matchExpressions:   
            - key: "accelerator"     
              operator: In
              values: 
                - "nvidia-tesla-p100"    
          weight: 100
status: {}
