nginx-limitrange.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-limitrange
  name: nginx-limitrange
spec:
  containers:
  - image: nginx
    name: nginx-limitrange
    resources: 
     requests:
        memory: 250Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
