nginx-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-limits
  name: nginx-limits
spec:
  containers:
  - image: nginx
    name: nginx-limits
    resources:
      limits:
        cpu: 200m
        memory: 512Mi
      requests:
        cpu: 100m
        memory: 256Mi 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
