nginx-new-config.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-new-config
  name: nginx-new-config
spec:
  containers:
  - envFrom:
    - configMapRef:
          name: anotherone
    image: nginx
    name: nginx-new-config
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
