pod-securitycontext-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - image: busybox:1.28
    name: busybox
    command: ["sh", "-c", "sleep 1h"] 
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
