pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1
  name: pod1
spec:
  containers:
  - image: nginx
    name: pod1
    resources: 
      requests:
        cpu: 0.5
        memory: "1Gi"
      limits:
        cpu: 1
        memory: "2Gi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
