readiness-probe-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: readiness-probe
  name: readiness-probe
spec:
  containers:
  - image: busybox
    command:
      - "sh"
      - "-c"
    args:
      - |
        echo sleep10
        sleep 10
        echo done10
        touch /etc/welcomePage
        echo touchCompleteandSleep3600
        sleep 3600
        echo Completed
    name: readiness-probe
    resources: {}
    readinessProbe:
      exec:
        command:
          - "sh"
          - "-c"
          - "stat /etc/welcomePage"
      initialDelaySeconds: 60
      periodSeconds: 5
      successThreshold: 1
      failureThreshold: 10
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
