resource-request-limit-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: resource-request-limit
  name: resource-request-limit
spec:
  containers:
  - image: nginx
    name: resource-request-limit
    resources: 
      requests:
        memory: "1Gi"
        cpu: 0.2
      limits:
        memory: "2Gi"
        cpu: 0.5
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
