security-context-container-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: security-context-container
  name: security-context-container
spec:
  securityContext:
    runAsUser: 1100
  containers:
  - image: busybox
    name: security-context-container
    command: ["sh", "-c", "sleep 1h"]
    resources: {}
    securityContext:
      runAsUser: 1000
      capabilities: 
        add: ["SYS_TIME"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
